Prepare for Sunflower v13.0.5 release (#1134)
* Prepare for Sunflower v13.0.5 release

* Prepare for Sunflower v13.0.5 release. Update news

* Prepare for Sunflower v13.0.5 release. Add fix for instance matching

* [maven-release-plugin] prepare release v13.0.5

* [maven-release-plugin] prepare for next development iteration

---------

Co-authored-by: damien-git <damien-git@users.noreply.github.com>